# openstock

./: .env.docker.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  PRD.md  README.md  docker-compose.yml  start-backend.sh  start-frontend.sh
.cursor/rules/: Vue-3-TypeScript.mdc
.minimax/skills/minimax-docx/: docx_engine.py  requirements.txt
.trae/rules/: project_rules.md
backend/: .env.example  Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration.py  002_add_daily_basic_table.py  003_add_moneyflow_table.py  004_add_users_tables.py  005_add_trade_calendar_table.py  0988749dba40_add_bak_daily_table.py  bccf57168606_add_user_favorites_table.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  schemas.py  strategy.py
backend/app/core/: config.py  logger.py
backend/app/db/: base.py
backend/app/models/: stock.py
backend/app/services/: tushare_service.py
backend/tests/: conftest.py  test_strategy.py  test_trade_cal.py
deploy/: .env.example  docker-compose.yml
frontend/: COMPONENTIZATION_SUMMARY.md  Dockerfile  REFACTORING_EXAMPLE.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/assets/: base.css  main.css
frontend/src/components/: ActionButton.vue  AlertMessage.vue  AppNavbar.vue  Badge.vue  ComboStrategyPanel.vue  DataTable.vue  DetailItem.vue  EmptyState.vue  FirstLimitPanel.vue  FormField.vue  FormInput.vue  FormSelect.vue  (+8 more)
prototype/web/: index.html
(+34 files in other folders)
