[project]
name = "openstock-backend"
version = "0.1.0"
description = "股票分析系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "tushare>=1.3.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
